# Gnothi

./: .gitignore  README.md  package-lock.json  package.json
backend/: app.py  build.py  config.py  desktop.py  requirements.txt
backend/models/: __init__.py  daily_report.py  note.py  todo.py
backend/routes/: __init__.py  note.py  report.py  todo.py
backend/utils/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: ConfirmDialog.vue  Sidebar.vue  TimePicker.vue  TitleBar.vue  Toast.vue
frontend/src/components/notes/: BlockEditor.vue  NoteEditor.vue  NotesList.vue
frontend/src/components/report/: Calendar.vue  ReportTable.vue
frontend/src/components/todo/: TodoAdd.vue  TodoFilters.vue  TodoItem.vue
frontend/src/components/tools/: CmJsonViewer.vue  JsonFormatter.vue  JsonTree.vue  RegexTester.vue
frontend/src/composables/: useTheme.js
frontend/src/router/: index.js
frontend/src/styles/: global.css
frontend/src/views/: DiaryView.vue  HomeView.vue  NotesView.vue  ReportView.vue  SettingsView.vue  TodoView.vue  ToolsView.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icons.py
src-tauri/src/: lib.rs  main.rs
